--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -82,8 +82,7 @@ nav ul {
 
 	<header th:fragment="frag_header">
 		<nav>
-			<a th:href="@{/}"> <img class="logo" src="../static/img/logo.png"
-				th:src="@{/img/logo.png}" alt="ロゴ画像">
+			<a th:href="@{/}"> <img class="logo" th:src="@{/img/logo.png}" alt="ロゴ画像">
 			</a>
 			<ul>
 				<div class="nav">
