--- a/src/main/resources/templates/chat.html
+++ b/src/main/resources/templates/chat.html
@@ -6,15 +6,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>チャット|clubHub</title>
 <link th:href="@{/css/reset.css}" rel="stylesheet" type="text/css">
-<link th:href="@{/CSS/chat.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/chat.css}" rel="stylesheet" type="text/css">
 <style th:include="header :: head_style"></style>
 </head>
 
 <body>
 	<div class="wrapper">
 		<header th:include="header :: frag_header"></header>
-
-		<p class="title">message</p>
+		<a th:href="@{/mailbox/school/{id}(id=${sid})}">
+			<p class="title">message box <span>に戻る</span></p>
+		</a>
 		<span th:text="${error}"></span>
 
 
@@ -28,7 +29,7 @@
 					</div>
 					<div class="comment">
 						<p th:text="${chat.message}">投稿内容が入ります。</p>
-						<p th:text=${chat.date}>2020/12/31 00:00:00</p>
+						<p th:text="${#dates.format(chat.date ,'yyyy/MM/dd HH:mm')}">2020/12/31 00:00:00</p>
 					</div>
 				</div>
 			</div>
@@ -41,18 +42,18 @@
 					</div>
 					<div class="comment">
 						<p th:text="${chat.message}">投稿内容が入ります。</p>
-						<p th:text="${chat.date}">2020/12/31 00:00:00</p>
+						<p th:text="${#dates.format(chat.date ,'yyyy/MM/dd HH:mm')}">
 					</div>
 				</div>
 			</div>
 		</section>
 
 		<div class="chat1">
-			<textarea name="" id="" cols="30" rows="10"
+			<form method="post" th:action="|/chat/school/${sid}/coach/${cid}|">
+			<textarea name="message" th:value="${message}" id="message" cols="30" rows="10"
 				placeholder="気になることがあればコメントで聞いてみましょう！"></textarea>
 			<p>相手のことを考え丁寧なコメントを心がけましょう。</p>
 
-			<form action="">
 				<input class="button" type="submit" value="コメントする">
 			</form>
 		</div>
