--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -13,14 +13,18 @@ body {
 }
 
 .title {
+	color:#525050;
 	border-bottom: 1px solid #5a5a5a;
 	padding: 20px;
 	text-align: center;
 	font-weight: bold;
-	font-size: 24px;
+	font-size: 28px;
 	margin: 50px auto;
 	margin-bottom: 150px;
 	font-weight: bold;
+}
+.title span{
+	font-size: 14px;
 }
 
 .button {
