--- a/src/main/resources/templates/mailbox.html
+++ b/src/main/resources/templates/mailbox.html
@@ -14,17 +14,23 @@
 	<div class="wrapper">
 		<header th:include="header :: frag_header"></header>
 
+
+		
 		<p class="title">message box</p>
 		<span th:text="${error}"></span>
 
-		<div class="receive" th:each="chat : ${chatlist}">
-			<img th:src="@{/img/図1.png}">
-			<div>
-				<p th:text="${chat.coachId}"></p>
-				<p th:text="${chat.message}"></p>
-			</div>
+		<p class="border"></p>	
+		<div class="receive2" th:each="chat:${chatlist}">
+			<a th:href="|${path}/coach/${chat.coachId}|">
+				<div class="receive">
+					<img th:src="@{/img/図1.png}">
+					<div class="receive1" th:object="${coachlist.get(__${chat.coachId}-1__)}">
+						<p th:text="*{lastName} +' さん'">コーチ名</p>
+						<p th:text="${chat.message}"></p>
+					</div>
+				</div>
+			</a>
 		</div>
-
 	</div>
 
 </body>
