画像圧縮処理完成
これから、POSTとcoachに組み込み

--- a/src/main/resources/templates/demo.html
+++ b/src/main/resources/templates/demo.html
@@ -33,6 +33,7 @@
 			
 			<div th:if="${photodata}" th:each="img : ${photodata}">
 				<p th:text="${img.id}"></p>
+				<p th:text="${img.image}"></p>
 			</div>
 
 			<img th:if="${base64data}" th:src="${base64data}" />
