画像表示進行、メール機能テスト中

--- a/src/main/resources/templates/coachMypage.html
+++ b/src/main/resources/templates/coachMypage.html
@@ -70,7 +70,7 @@
 					</div>
 					<div class="content1">
 						<li class="list">写真</li>
-						<p></p>
+						<img th:if="${base64data}" th:src="${base64data}" />
 					</div>
 
 				</ul>
