Revert "画像表示進行、メール機能テスト中"
This reverts commit 8ca70fbc89d1cf127152423e1c4b81fd732511e1.

--- a/src/main/resources/templates/coachedit.html
+++ b/src/main/resources/templates/coachedit.html
@@ -194,13 +194,10 @@
 
 				<div class="content">
 					<div class="content1">
-						<li>写真</li>
-						<input type="file" name="uploadfile" id="photo" th:value="*{image}">
-						<img th:if="${base64data}" th:src="${base64data}" />
+						<li>写真</li> <input class="photoup" type="file" name="photo">
 					</div>
 				</div>
 			</ul>
-				<input type="hidden" name="image" th:value="*{image}">
 				<input class="button" type="submit" value="修正する">
 		</form>
 
