--- a/src/main/resources/templates/schoolMypage.html
+++ b/src/main/resources/templates/schoolMypage.html
@@ -68,6 +68,7 @@
 					</div>
 					<div class="content1">
 						<li class="list">写真</li>
+						<img th:if="${base64data}" th:src="${base64data}" />
 						<p></p>
 					</div>
 
