--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -77,6 +77,9 @@ nav ul {
 .login:hover, .entry:hover {
 	opacity: 0.7;
 }
+.school{
+	display:flex;
+}
 </style>
 </head>
 
@@ -105,10 +108,13 @@ nav ul {
 					</a>
 				</div>
 
-				<div th:if="${sdata}" th:object="${sdata}">
+				<div class="school" th:if="${sdata}" th:object="${sdata}">
 					<a th:href="@{/mypage/school/{id}(id=${sdata.id})}">
 						<li th:if="${AccountName}" th:text="${AccountName}+' 様'"
 						class="login"></li>
+					</a>
+					<a th:href="@{/post}">
+						<li th:if="${AccountName}" class="entry">部活登録</li>
 					</a>
 				</div>
 
