--- a/src/main/resources/templates/schoolChat.html
+++ b/src/main/resources/templates/schoolChat.html
@@ -25,8 +25,8 @@
 				<p th:text="${cdatalist.lastName} + 'さん'" class="userName">ユーザ名ユーザ名ユーザ名</p>
 				<div class="container">
 					<div class="user">
-						<img th:if="${base64data}" th:src="${base64data}" />
-						<img th:unless="${base64data}" th:src="@{/img/図1.png}" alt="">
+						<img th:unless=${cdatalist.image} th:src="@{/img/図1.png}">
+						<img th:if=${cdatalist.image} th:src="|data:image/jpeg;base64,${cdatalist.image}|">
 					</div>
 					<div class="comment">
 						<p th:text="${chat.message}">投稿内容が入ります。</p>
@@ -39,7 +39,8 @@
 				<p class="userName" th:text="${sdatalist.schoolName}">投稿者</p>
 				<div class="container">
 					<div class="user">
-						<img th:src="@{/img/図1.png}" alt="">
+						<img th:unless="${base64data}" th:src="@{/img/図1.png}" alt="">
+						<img th:if="${base64data}" th:src="${base64data}" />
 					</div>
 					<div class="comment">
 						<p th:text="${chat.message}">投稿内容が入ります。</p>
