デザイン調整

--- a/src/main/resources/templates/schooledit.html
+++ b/src/main/resources/templates/schooledit.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>clubHub|アカウント修正＜学校用＞</title>
 <link th:href="@{/css/reset.css}" rel="stylesheet" type="text/css">
-<link th:href="@{/CSS/school.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/school.css}" rel="stylesheet" type="text/css">
 <style>
 .err {
 	color: red;
