--- a/src/main/resources/templates/coachMailbox.html
+++ b/src/main/resources/templates/coachMailbox.html
@@ -4,10 +4,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>チャット|clubHub</title>
+<title>clubHub|チャット</title>
+<link rel="icon" type="image/png" th:href="@{/img/favicon.jpg}"/>
 <link th:href="@{/css/reset.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/css/mailbox.css}" rel="stylesheet" type="text/css">
 <style th:include="header :: head_style"></style>
+<style th:include="footer :: foot_style"></style>
 </head>
 
 <body>
@@ -33,7 +35,7 @@
 			</a>
 		</div>
 	</div>
-
+	<footer th:include="footer :: frag_footer"></footer>
 </body>
 
 </html>
