--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -3,9 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ログイン|clubHub</title>
+<title>clubHub|</title>
+<link rel="icon" type="image/png" th:href="@{/img/favicon.jpg}"/>
 <link th:href="@{/css/reset.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/css/result.css}" rel="stylesheet" type="text/css">
+<style th:include="footer :: foot_style"></style>
+<style th:include="footer :: foot_style"></style>
 <style>
 .err {
 	color: red;
@@ -25,6 +28,7 @@
 		<a class="button" th:href="@{/}">ホームに戻る</a>
 
 	</div>
+		<footer th:include="footer :: frag_footer"></footer>
 </body>
 
 </html>
