--- a/src/main/resources/templates/schoolMypage.html
+++ b/src/main/resources/templates/schoolMypage.html
@@ -5,9 +5,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>clubHub|マイページ</title>
+<link rel="icon" type="image/png" th:href="@{/img/favicon.jpg}"/>
 <link th:href="@{/css/reset.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/css/school.css}" rel="stylesheet" type="text/css">
 <style th:include="header :: head_style"></style>
+<style th:include="footer :: foot_style"></style>
 <style>
 .err {
 	color: red;
@@ -26,10 +28,7 @@
 			<!--       if文でコーチ情報がなければ表示とか　あればスクール情報表示 -->
 			<div th:if="${sdatalist}" th:object="${sdatalist}">
 				<ul>
-					<div class="content1">
-						<li class="list">ID</li>
-						<p th:text="*{id}"></p>
-					</div>
+				
 					<div class="content1">
 						<li class="list">学校名</li>
 						<p th:text="*{schoolName}"></p>
@@ -50,10 +49,7 @@
 						<li class="list">メールアドレス</li>
 						<p th:text="*{mail}"></p>
 					</div>
-					<div class="content1">
-						<li class="list">パスワード</li>
-						<p th:text="*{password}"></p>
-					</div>
+				
 					<div class="content1">
 						<li class="list">エリア</li>
 						<p th:text="*{area}"></p>
@@ -85,5 +81,6 @@
 			</div>
 		</main>
 	</div>
+		<footer th:include="footer :: frag_footer"></footer>
 </body>
 </html>
