--- a/src/main/resources/templates/select.html
+++ b/src/main/resources/templates/select.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>会員登録|clubHub</title>
+<title>clubHub|会員登録</title>
+<link rel="icon" type="image/png" th:href="@{/img/favicon.jpg}"/>
 <link th:href="@{/css/reset.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/css/select.css}" rel="stylesheet" type="text/css">
 <style>.err {color: red;}</style>
 <style th:include="header :: head_style"></style>
+<style th:include="footer :: foot_style"></style>
 </head>
 
 <body>
@@ -20,5 +22,6 @@
 		<a th:href="@{school}"><p class="select">＜ 学校 ＞</p></a>
 		<a th:href="@{coach}"><p class="select coach">＜ コーチ ＞</p></a>
 	</div>
+		<footer th:include="footer :: frag_footer"></footer>
 </body>
 </html>
