--- a/src/main/resources/templates/validate.html
+++ b/src/main/resources/templates/validate.html
@@ -3,15 +3,17 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ログイン|clubHub</title>
+<title>clubHub|メール認証</title>
+<link rel="icon" type="image/png" th:href="@{/img/favicon.jpg}"/>
 <link th:href="@{/css/reset.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/css/validate.css}" rel="stylesheet" type="text/css">
+<style th:include="header :: head_style"></style>
+<style th:include="footer :: foot_style"></style>
 <style>
 .err {
 	color: red;
 }
 </style>
-<style th:include="header :: head_style"></style>
 </head>
 
 <body>
@@ -101,6 +103,7 @@
 		<a class="button" th:href="@{/}">ホームに戻る</a>
 
 	</div>
+		<footer th:include="footer :: frag_footer"></footer>
 </body>
 
 </html>
