--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -49,12 +49,12 @@
 	<footer th:fragment="frag_footer">
 		<div class="footer">
 			<div class="center">
-				<a id="twitter" th:href="@{https://twitter.com/clubHub_h}">
+				<a id="twitter" th:href="@{https://twitter.com/clubHub_h}" target=”_blank”>
 				<img th:src="@{/img/Twitter.png}">
 				</a>
 				<p>©clubHub</p>
-				<a th:href="@{/file/利用規約.pdf}">利用規約</a>
-				<a th:href="@{/file/プライバシーポリシー.pdf}">プライバシーポリシー</a>
+				<a th:href="@{/file/利用規約.pdf}" target=”_blank”>利用規約</a>
+				<a th:href="@{/file/プライバシーポリシー.pdf}" target=”_blank”>プライバシーポリシー</a>
 			</div>
 		</div>
 	</footer>
