--- a/src/main/resources/templates/schooledit.html
+++ b/src/main/resources/templates/schooledit.html
@@ -39,7 +39,8 @@
 					<div class="content">
 						<label>
 							<div class="content1">
-								<li>区分</li> <select name="category" th:value="*{category}">
+								<li>区分</li>
+								<select name="category" th:value="*{category}">
 									<option value="">選択してください</option>
 									<option value="小学校">小学校</option>
 									<option value="中学校">中学校</option>
@@ -54,7 +55,7 @@
 							</div>
 						</label>
 					</div>
-					<div>
+					<div class="content">
 						<label>
 							<div class="content1">
 								<li class="list">担当者[姓]</li> <input type="text" name="lastName"
@@ -64,7 +65,7 @@
 							</div>
 						</label>
 					</div>
-					<div>
+					<div class="content">
 						<label>
 							<div class="content1">
 								<li class="list">担当者[名]</li> <input type="text" name="firstName"
