--- a/src/main/resources/templates/mailbox.html
+++ b/src/main/resources/templates/mailbox.html
@@ -15,7 +15,8 @@
 <body>
 	<div class="wrapper">
 		<header th:include="header :: frag_header"></header>
-
+		<main>
+		
 
 		
 		<p class="title">message box</p>
@@ -33,6 +34,7 @@
 				</div>
 			</a>
 		</div>
+		</main>
 	</div>
 	<footer th:include="footer :: frag_footer"></footer>
 </body>
