--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -80,6 +80,38 @@ nav ul {
 .school{
 	display:flex;
 }
+
+@media ( max-width : 768px) {
+	
+	nav li {
+	    font-size: 6px;
+	    margin: 3px;
+	    padding: 5px;
+	    width: 36px;
+	    height: 18px;
+	    text-align: center;
+	    vertical-align: text-top;
+	}
+	.nav li{
+		border:1px solid #7a7a7a;
+	}
+	.entry, .login{
+		font-size:6px;
+		margin:3px;
+		width:40px;
+		padding:8px 5px 2px;
+	}
+	
+	.logo{
+		width:20vw;
+		height:8.5vw;
+		margin:8px
+	}
+	
+	
+	}
+
+
 </style>
 </head>
 
