--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -52,6 +52,9 @@
 	.content1 {
 		display: block;
 	}
+	.content1 p , .content1 img{
+		margin-left:40px;
+	}
 	.content {
 		margin: 40px 20px;
 	}
