--- a/src/main/resources/static/css/chat.css
+++ b/src/main/resources/static/css/chat.css
@@ -50,8 +50,8 @@ body {
 }
 
 .user img {
-	height:80px;
-	width: auto;
+	height:auto;
+	width: 80px;
 }
 
 .container {
@@ -138,6 +138,9 @@ body {
 @media ( max-width : 768px) {
 	.user img{
 	width:40px;
+	height:auto;
 	}
-	
+	section{
+	margin:20px 10px;
+	}
 	}
